--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,8 @@
 version: '3.4'
 
+volumes:
+  database:
+
 services:
   app:
     ports:
@@ -42,3 +45,5 @@ services:
       MYSQL_USER: dev_usr
       MYSQL_PASSWORD: dev_passwd
       MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - database:/var/lib/mysql
